--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.dailytopnews"
+        applicationId "com.brhmty.dailytopnews"
         minSdk 21
         targetSdk 31
         versionCode 1
